production bug: body background does not get full coverage on mobile when phone keyboard is engaged

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,6 +4,7 @@
 
 html {
   font-size: 62.5%;
+  height: 100%;
 }
 
 body {
@@ -11,6 +12,8 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
   line-height: 1.6;
+  min-height: 100%;
+
 }
 
 button {
