--- a/src/styles/components/_aquaponic.scss
+++ b/src/styles/components/_aquaponic.scss
@@ -4,7 +4,7 @@
     text-align: center;
     padding-top: $s-size;
     padding-bottom: 10rem;
-    height: 100vh;
+    // height: 100vh;
     width: 100vw;
     @media (min-width: $desktop-breakpoint) {
         padding-top: $l-size * 2;
