--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   padding: $l-size $l-size;
+  text-align: center;
 
   @media (min-width: $desktop-breakpoint) {
     align-items: center;
