--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -54,7 +54,7 @@
 }
 
 .modal__btn-bar > * {
-  margin: 0 $s-size/2 0 $s-size/2;
+  margin: 0 $s-size/2 $s-size $s-size/2;
 }
 
 .modal__btn {
